[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
text = "Play Game"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 280.0
margin_right = 250.0
margin_bottom = 320.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 330.0
margin_right = 250.0
margin_bottom = 370.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="title_name"]
margin_left = 100.0
margin_top = 380.0
margin_right = 250.0
margin_bottom = 420.0
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="title_name/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="title_name/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="title_name/quit_button" to="." method="_on_quit_button_pressed"]
